# seri-game-engine

./: .env.example  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Maze.sln  README.md  Seri Game Engine.sln  copy.bat  generate.bat  premake5.lua  update.bat
Maze/: Camera.cpp  Camera.h  Game.cpp  Game.h  Light.cpp  Light.h  Maze.cpp  Maze.h  Maze.vcxproj  Maze.vcxproj.filters  Renderer.cpp  Renderer.h  Skybox.cpp  Skybox.h  Typer.cpp  Typer.h  Window.cpp  Window.h  main.cpp
Maze/shaders/: Shader.cpp  Shader.h  basic_fs.shader  basic_vs.shader  game_fs.shader  game_vs.shader  light_vs.shader  typer_fs.shader  typer_vs.shader
Maze/source/: Camera.cpp  Camera.h  Maze.cpp  Maze.h  Renderer.cpp  (+2 more)
editor/: .gitignore  Camera.h  Control.h  Factory.h  GUI.h  Runner.h  RunnerEditor.h  editor.vcxproj  editor.vcxproj.filters  imgui.ini  premake5.lua
engine/: AuxiliaryStructs.h  CameraProperties.h  Circle.h  Cube.h  Entity.h  EntityType.h  ICamera.h  ICommand.h  IControl.h  IRunner.h  IScene.h  Layer.h  Light.h  Line.h  LogManager.h  Logger.h  Mat4.h  Mesh.h  Model.h  OpenGLEngineBackend.h  Point.h  Polygon.h  Rectangle.h  Scene.h  Shader.h  ShaderManager.h  Skybox.h  State.h  Texture.h  Transform.h  Triangle.h  Typer.h  WindowManager.h  engine.vcxproj  engine.vcxproj.filters  premake5.lua
maze/: Camera.h  Game.h  Maze.h  README.md  Runner.h  maze.vcxproj  maze.vcxproj.filters
mics/: Camera.h  Control.h  Fractal.h  PerlinNoise.h  RunnerMics.h  mics.vcxproj  mics.vcxproj.filters  premake5.lua
seri/: DebugDraw.h  premake5.lua
snake/: Board.h  Food.h  RunnerSnake.h  Snake.h  SnakeProperties.h  SnakeShaders.h  snake.vcxproj  snake.vcxproj.filters
src/: Camera.cpp  Camera.h  CameraMaze.h  CameraOld.cpp  CameraOld.h  Circle.h  Color.h  Control.h  ControlMaze.h  Controller.h  Cube.h  Entity.h  Factory.h  GUI.h  Game.cpp  Game.h  ICamera.h  ICommand.h  IControl.h  IControler.h  IRunner.h  InputHandler.h  JumpCommand.h  Layer.h  Light.cpp  Light.h  Line.h  LogManager.h  Logger.h  Mat3.h  Mat4.h  Maze.cpp  Maze.h  Maze.vcxproj  Maze.vcxproj.filters  MazeRunner.h  MoveCommand.h  Object.h  Point.h  Rectangle.h  (+26 more)
tetris/: Block.h  BlockFactory.h  BlockI.h  BlockJ.h  BlockL.h  BlockMovement.h  BlockO.h  BlockS.h  BlockT.h  BlockType.h  BlockZ.h  Board.h  Control.h  IBlock.h  RunnerTetris.h  Tetris.h  TetrisShaders.h  tetris.vcxproj  tetris.vcxproj.filters
(+611 files in other folders)
